tests/snapshots/cli_characterization_tests__dsv_col0_raw.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \"--input-dsv\", \",\", \"-r\", \".[0]\"], CSV_PEOPLE)?"
---
name
Alice
Bob
