tests/snapshots/cli_characterization_tests__dsv_rows.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \"--input-dsv\", \",\", \"-c\", \".\"], CSV_PEOPLE)?"
---
["name","age"]
["Alice","30"]
["Bob","25"]
