tests/snapshots/cli_characterization_tests__dsv_select_row.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \"--input-dsv\", \",\", \"-c\", \"select(.[0] == \\\"Alice\\\")\"],\nCSV_PEOPLE)?"
---
["Alice","30"]
