tests/snapshots/cli_characterization_tests__jq_nested_path.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \"-c\", \".a.b.c\"], JSON_NESTED)?"
---
[1,2,3]
