tests/snapshots/cli_characterization_tests__jq_users_csv.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \"-r\", \".users[] | [.name, .age] | @csv\"], JSON_USERS)?"
---
"Alice",30
"Bob",25
