tests/snapshots/cli_characterization_tests__jq_users_length.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \".users | length\"], JSON_USERS)?"
---
2
