tests/snapshots/cli_characterization_tests__jq_users_names_raw.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"jq\", \"-r\", \".users[].name\"], JSON_USERS)?"
---
Alice
Bob
