tests/snapshots/cli_characterization_tests__yq_config_container_names.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"yq\", \".spec.containers[].name\"], YAML_CONFIG)?"
---
web
sidecar
