tests/snapshots/cli_characterization_tests__yq_config_identity.snap
---
source: tests/cli_characterization_tests.rs
assertion_line: 159
expression: "run(&[\"yq\", \".\"], YAML_CONFIG)?"
---
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  containers:
    - name: web
      image: nginx
    - name: sidecar
      image: envoy
