tests/snapshots/cli_characterization_tests__yq_config_to_json.snap
---
source: tests/cli_characterization_tests.rs
expression: "run(&[\"yq\", \"-o\", \"json\", \".\"], YAML_CONFIG)?"
---
{
  "apiVersion": "v1",
  "kind": "Pod",
  "metadata": {
    "name": "demo"
  },
  "spec": {
    "containers": [
      {
        "name": "web",
        "image": "nginx"
      },
      {
        "name": "sidecar",
        "image": "envoy"
      }
    ]
  }
}
